syntax = "proto3";

package fuotaupdate;

option go_package = "github.com/chirpstack/chirpstack-fuota-server/v4/api/go";

message FuotaUpdate {
  string deviceCode = 1;
  int64 timestamp = 2;
  string firmwareUpdated = 3;
  bool success = 4;
}

message UniversalProto {
  int32 id = 1;
  bytes payload = 2;
}